updated adminportal to include link to add new assets

--- a/src/main/resources/templates/adminportal.html
+++ b/src/main/resources/templates/adminportal.html
@@ -63,10 +63,10 @@
                     <a class="page-scroll" href="/#datasets">Datasets</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/#team">Our team</a>
+                    <a class="page-scroll" href="/add_new_asset">Add New Asset</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/shoppingcart">Shopping Cart</a>
+                    <a class="page-scroll" href="/">View All Orders</a>
                 </li>
                 <li>
                     <a class="page-scroll" th:href="@{|${loginRouting}|}"><span th:text="${loginstate}"></span></a>
