updated admin portal for add new user, added thank you html

--- a/src/main/resources/templates/add_new_asset.html
+++ b/src/main/resources/templates/add_new_asset.html
@@ -132,7 +132,7 @@
                  </select>
                  <select name="active">
                     <option value="true">Active</option>
-                    <option value="true">Not Active</option>
+                    <option value="false">Not Active</option>
                  </select>
 <!--                <input type="text" name="featured" value="false" required>-->
 <!--                 <input type="text" name="active" value="true" required>-->
