--- a/src/main/resources/templates/adminportal.html
+++ b/src/main/resources/templates/adminportal.html
@@ -60,7 +60,7 @@
                     <a class="page-scroll" href="/#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/#datasets">Datasets</a>
+                    <a class="page-scroll" href="/newuser">Add New User</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="/add_new_asset">Add New Asset</a>
