Added view_order.html to see details of a specific order

--- a/src/main/resources/templates/shoppingcart.html
+++ b/src/main/resources/templates/shoppingcart.html
@@ -144,7 +144,7 @@
                       
                       
                         <td class="border-0 align-middle text-muted">
-                            <button type="submit" name="delete" class="fabutton">
+                            <button type="submit" name="delete" style="color: black;" class="fabutton text-dark">
                                 <i class="fa fa-trash" href=""></i>
                             </button>    
                         </td>
