View all orders now doubles as viewallorders for admin and order history for customers

--- a/src/main/resources/templates/thankyou.html
+++ b/src/main/resources/templates/thankyou.html
@@ -97,7 +97,7 @@
     <section class="container content-section text-center">
         <h3>We have recieved your order.</h3>
         <p>You can review your order here.</p>
-        <a href="/" class="btn btn-default btn-lg">Review Order</a>
+        <a href="/viewallorders" class="btn btn-default btn-lg">Review Your Orders</a>
         <a href="/viewalldata" class="btn btn-default btn-lg">Continue Shopping</a>
     </section>
 </div>
