--- a/src/main/resources/templates/view_order.html
+++ b/src/main/resources/templates/view_order.html
@@ -59,10 +59,10 @@
                             <a href="#page-top"></a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="/newuser">Add New User</a>
+                            <a th:if="${admin}" class="page-scroll" href="/newuser">Add New User</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="/add_new_asset">Add New Asset</a>
+                            <a th:if="${admin}" class="page-scroll" href="/add_new_asset">Add New Asset</a>
                         </li>
                         <li>
                             <a class="page-scroll" href="/viewallorders">View All Orders</a>
@@ -96,9 +96,6 @@
     <div class="row">
         <div th:if="${loggedIn}">
             <h2 id="cart_title">Order items</h2>
-            
-
-            <!-- Shopping cart table -->
             <div class="table-responsive cart_table">
                 <table class="table">
                   <thead>
@@ -147,14 +144,17 @@
 <div class="row text-right" th:if="${loggedIn}">
     <h5 style="color: black; padding-right: 1em;">Total amount: &euro;<span th:text="${order.getTotPrice()}"></span></h5>   
 </div>
-        <div class="row">
-            <form method="POST" action="/change_order_status">
-                <input type="text" name="userID" style="display: none;" th:value="${order.getUser().getId()}">
-                <input type="text" name="orderID" style="display: none;" th:value="${order.getOrder_id()}">
-                <input type="text" name="newStatus" th:placeholder="${order.getStatus()}">
-                <button type="submit">Update Status</button>
-            </form>
-        </div>
+<div th:unless="${admin}" class="row text-right" th:if="${loggedIn}">
+    <h5 style="color: black; padding-right: 1em;">Order Status: <span th:text="${order.getStatus()}"></span></h5>   
+</div>
+<div th:if="${admin}" class="row">
+    <form method="POST" action="/change_order_status">
+        <input type="text" name="userID" style="display: none;" th:value="${order.getUser().getId()}">
+        <input type="text" name="orderID" style="display: none;" th:value="${order.getOrder_id()}">
+        <input type="text" name="newStatus" th:placeholder="${order.getStatus()}">
+        <button type="submit">Update Status</button>
+    </form>
+</div>
 <div class="row" th:if="${loggedIn}">
     <form method="GET" action="/viewallorders">
         <button type="submit">Back to all orders</button>
