--- a/src/main/resources/templates/view_all_orders.html
+++ b/src/main/resources/templates/view_all_orders.html
@@ -56,14 +56,14 @@
                 <li class="hidden">
                     <a href="#page-top"></a>
                 </li>
-                <li>
+                <li th:if="${admin}">
                     <a class="page-scroll" href="/newuser">Add New User</a>
                 </li>
-                <li>
+                <li th:if="${admin}">
                     <a class="page-scroll" href="/add_new_asset">Add New Asset</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/viewallorders">View All Orders</a>
+                    <a class="page-scroll" href="/viewallorders">Orders</a>
                 </li>
                 <li>
                     <a class="page-scroll" th:href="@{|${loginRouting}|}"><span th:text="${loginstate}"></span></a>
@@ -81,30 +81,111 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center intro-body">
-                <h2 class="brand-heading-secondary">View All Orders</h2>
+                <h2 th:if="${admin}" class="brand-heading-secondary">View All Orders</h2>
+                <h2 th:unless="${admin}" class="brand-heading-secondary">Your Order History</h2>
                 <a href="/" class="btn btn-default btn-lg">Back to Main Page</a>
-                <a href="/adminportal" class="btn btn-default btn-lg" th:if="admin">Back to Admin Portal</a>
+                <a href="/adminportal" th:if="${admin}" class="btn btn-default btn-lg">Back to Admin Portal</a>
             </div>
         </div>
     </div>
 </div>
 
-<div class="container">
+<div class="container-fluid shoppingcart cart">
     <div class="row">
-<!--        <div th:if="admin">-->
-<!--        <div class="col-md-4 all-data-filters">-->
-<!--            <input type="checkbox" class="all-check-box" checked id="0" />-->
-<!--            <label for="0">All</label>-->
-<!--            <th:block th:each="status: ${orderStats}">-->
-<!--                <div>-->
-<!--                    <input type="checkbox" class="type-check-box" checked th:id="${status.getStatus()}" />-->
-<!--                    <label th:for="${status.status.getStatus()}" th:text="${status.status.getStatus()}"></label>-->
-<!--                </div>-->
-<!--            </th:block>-->
-<!--        </div>-->
-<!--        </div>-->
-        <div class="col-md-8 all-data-assets">
-            <th:block th:each="order: ${orders}">
+        <div th:if="${loggedIn}">
+            <h2 id="cart_title">Orders</h2>
+            <div class="table-responsive cart_table">
+                <table class="table">
+                  <thead>
+                    <tr>
+                      <th scope="col" class="border-0 bg-light">
+                        <div class="p-2 px-3 text-uppercase">Order ID</div>
+                    </th>
+                    <th scope="col" class="border-0 bg-light">
+                        <div class="py-2 text-uppercase">Date</div>
+                    </th>
+                    <th scope="col" class="border-0 bg-light">
+                        <div class="py-2 text-uppercase">Status</div>
+                    </th>
+                    <th scope="col" class="border-0 bg-light">
+                        <div class="py-2 text-uppercase">Cost</div>
+                    </th>
+                    <th scope="col" class="border-0 bg-light">
+                        <div class="py-2 text-uppercase">View</div>
+                    </th>
+                    <th th:if="${admin}" scope="col" class="border-0 bg-light">
+                        <div class="py-2 text-uppercase">Customer ID</div>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+                <th:block th:if="${admin}" th:each="order: ${orders}">
+                    <td class="border-0 text-muted">
+                        <span th:text="${order.getOrder_id()}"></span>
+                    </td>
+                    <td class="border-0 text-muted">
+                        <span th:text="${order.getDate()}"></span>
+                    </td>
+                    <td class="border-0 text-muted">
+                        <span th:text="${order.getStatus()}"></span>
+                    </td>
+                    <td class="border-0 text-muted">&euro;
+                        <span th:text="${order.getTotPrice()}"></span>
+                    </td>
+                    <td class="border-0 text-muted">
+                        <a th:href="@{${'/view_order/' + order.getOrder_id()}}">View Order</a>
+                    </td>
+                     <td th:if="${admin}" class="border-0 text-muted">
+                        <span th:text="${order.getUser().getId()}"></span>
+                    </td>
+                </tr>
+            </th:block> 
+            <th:block th:unless="${admin}" th:each="order: ${ordersByCustomer}">
+                <td class="border-0 text-muted">
+                        <span th:text="${order.getOrder_id()}"></span>
+                    </td>
+                    <td class="border-0 text-muted">
+                        <span th:text="${order.getDate()}"></span>
+                    </td>
+                    <td class="border-0 text-muted">
+                        <span th:text="${order.getStatus()}"></span>
+                    </td>
+                    <td class="border-0 text-muted">&euro;
+                        <span th:text="${order.getTotPrice()}"></span>
+                    </td>
+                    <td class="border-0 text-muted">
+                        <a th:href="@{${'/view_order/' + order.getOrder_id()}}">View Order</a>
+                    </td>
+                </tr>
+            </th:block> 
+        </tbody>
+    </table>
+</div>
+</div>
+<th:block th:unless="${loggedIn}">
+    <div class="row data-login-section">
+        <button th:attr="onclick=|window.location.href='/login?after=%2fviewallorders'|">Login To View Orders</button>
+    </div>
+</th:block>
+</div>
+</div>
+
+<!-- <div class="container">
+    <div class="row">
+        <div class="col-md all-data-assets"> 
+            <th:block th:if="${admin}" th:each="order: ${orders}">
+
+                    <div class="all-data-asset" th:attr="data-type-id=${order.getOrder_id()}">
+                        <h3 th:text="${order.getDate()}"></h3>
+                        <p th:text="${order.getStatus()}"></p>
+                        <p th:text="${order.getTotPrice()}"></p>
+                        <a th:href="@{${'/view_order/' + order.getOrder_id()}}">View Order</a>
+                    </div>
+
+            </th:block>
+        </div>
+        <div class="col-md all-data-assets">
+            <th:block th:unless="${admin}" th:each="order: ${ordersByCustomer}">
 
                     <div class="all-data-asset" th:attr="data-type-id=${order.getOrder_id()}">
                         <h3 th:text="${order.getDate()}"></h3>
@@ -116,7 +197,7 @@
             </th:block>
         </div>
     </div>
-</div>
+</div> -->
 
 
 <!-- Footer -->
@@ -127,25 +208,25 @@
 </footer>
 
 <!-- jQuery -->
-<script src="js/jquery.js"></script>
+<script src="/js/jquery.js"></script>
 
 <!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
 
 <!-- Plugin JavaScript -->
-<script src="js/jquery.easing.min.js"></script>
+<script src="/js/jquery.easing.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
-<script src="js/grayscale.js"></script>
+<script src="/js/grayscale.js"></script>
 <!--[if lte IE 8]><script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script><![endif]-->
 
-<script src="js/jquery.isotope.min.js" type="text/javavscript"></script>
-<script src="js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
-<script src="js/custom.js" type="text/javascript"></script>
-<script src="js/jquery-1.8.2.min.js" type="text/javascript"></script>
-<script type="text/javascript" src="js/wow.js"></script>
+<script src="/js/jquery.isotope.min.js" type="text/javavscript"></script>
+<script src="/js/fancybox/jquery.fancybox.pack.js" type="text/javascript"></script>
+<script src="/js/custom.js" type="text/javascript"></script>
+<script src="/js/jquery-1.8.2.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="/js/wow.js"></script>
 <!--JS script for checkboxes-->
-<script src="js/datasets_all.js"></script>
+<script src="/js/datasets_all.js"></script>
 
 </body>
 
